# ecd-seminar

./: .env.template  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile.airflow  Dockerfile.spark-base  README.md  docker-compose.yaml  mypy.ini  pyproject.toml  weather-backup.sql
docker/superset/config/: superset_config.py
src/: airflow.cfg  cfg.py  prophet.ipynb
src/api/: helpers.py
src/dags/: a.py  weather_dag.py
src/dags/sql/: create_cities_table.sql  get_city_coordinates.sql  insert_city_coordinates.sql  insert_weather_measurement.sql
src/database/: helpers.py
src/logs/scheduler/: latest
src/notebooks/: prophet.ipynb
