[tool.poetry]
name = "ecd-intensive-seminar"
version = "0.1.0"
description = ""
authors = ["Facu Palavecino <facundo6991@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
psycopg2-binary = "2.9.2"
apache-airflow = "2.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
